# HW_2_9

./: connect.py  connection.py  main.py  models.py  pyproject.toml  seeds.py
hw_scrapy_spider/: scrapy.cfg
hw_scrapy_spider/hw_scrapy_spider/: items.py  middlewares.py  pipelines.py  settings.py
hw_scrapy_spider/hw_scrapy_spider/spiders/: authors.py  quotes.py
