[tool.poetry]
name = "hw-scrapy"
version = "0.1.0"
description = ""
authors = ["Omelchenko-climber <omelchenko230783@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.28.2"
Scrapy = "^2.11.1"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pymongo = {extras = ["srv"], version = "^4.7.0"}
redis = "^5.0.4"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
